--- a/app.css
+++ b/app.css
@@ -91,6 +91,7 @@ button:active {
   box-shadow: 1px 1px 8px rgba(0, 0, 0, 0.26);
   padding: 1rem;
   margin: 1rem;
+  background: white;
 }
 
 .projects li h2 {
@@ -113,6 +114,11 @@ button:active {
 
 .droppable {
   background: #ffe3ee;
+}
+
+.hide {
+  transition: 0.01s;
+  transform: translateX(-9999px);
 }
 
 #finished-projects .droppable {
